styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Helvetica, Arial;
}

body {
  background: #0b0d10;
  color: #eaeaea;
}

/* TOP */
.topbar {
  position: sticky;
  top: 0;
  z-index: 999;

  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 14px;

  background: #0b0d10;
  border-bottom: 1px solid rgba(255,255,255,0.05);
}

.tg-icon {
  width: 26px;
  height: 26px;
  display: block;
}

.support {
  display: flex;
  align-items: center;
}

/* SCREEN */
.screen {
  display: none;
  padding: 16px;
  padding-bottom: 90px;
}

.screen.active {
  display: block;
}

/* IMAGE */
.title-image img {
  width: 100%;
  max-width: 320px;
  margin: 0 auto;
  display: block;
  border-radius: 14px;
}

/* CARD */
.card {
  background: #14171c;
  border-radius: 14px;
  overflow: hidden;
  margin-bottom: 12px;
}

/* INPUT */
input {
  width: 100%;
  padding: 14px;
  border: none;
  background: #14171c;
  color: white;
  outline: none;
}

/* TOGGLE */
.toggle {
  display: flex;
}

.toggle button {
  flex: 1;
  padding: 12px;
  border: none;
  background: #1b1f26;
  color: #aaa;
}

.toggle .active {
  background: #2a2f38;
  color: white;
}

/* PACKS */
.packs {
  display: flex;
}

.packs button {
  flex: 1;
  height: 44px;

  display: flex;
  align-items: center;
  justify-content: center;
  gap: 6px;

  border: none;
  background: #1b1f26;
  color: #ffd36a;
  font-weight: 600;
}

.packs button img {
  width: 14px;
  height: 14px;
  flex-shrink: 0;
}

/* CALC */
.calc {
  display: flex;
  justify-content: space-between;
  margin: 14px 0;
  color: #888;
}

/* BUY */
.buy {
  width: 100%;
  padding: 14px;
  border: none;
  border-radius: 14px;
  background: #2a2f38;
  color: white;
  font-weight: 600;
}

/* TAB */
.tabbar {
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  padding: 10px;
  background: #0b0d10;
  border-top: 1px solid rgba(255,255,255,0.05);
}

.tab {
  flex: 1;
  border: none;
  background: transparent;
  color: #777;
}

.tab.active {
  color: #ffd36a;
}
body {
  overflow-x: hidden;
}

